--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,6 @@
         #next_page {
             font-size: 1.2em;
         }
-        .topic_title {
-            font-size: 1.8em;
-        }
-        .topic_listing_front {
-            margin-bottom: 3em;
-        }
-        
-
     </style>
 {% end %}
 
@@ -47,7 +39,7 @@
             <h2 class="title">
                 <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
             </h2>
-            <div class="info">
+            <p class="info">
                 {% if not current_user %}
                     <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
                 {% elif topic.can_vote_up(current_user) %}
@@ -59,18 +51,13 @@
                 <span class="points">
                     {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
                 </span>
-                <br>
-                <img src="{{ topic.author.gravatar(60) }}" class="gravatar">
-                
-                <br>
                 {% if topic.author %}
                     by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>{% for editor in topic.editors %}, <a href="/users/{{ editor }}">{{ editor }}</a>{% end %}
                 {% else %}
                     by anonymous
                 {% end %}
-                <br>
                 {{ relative_date(topic.created) }}
-            </div>
+            </p>
             <div class="body">
                 {{ markdown(topic.text) }}
                 {% if topic.n_comments == 1 %}
@@ -81,7 +68,6 @@
                     <a href="/{{ topic.name }}">discuss</a>
                 {% end %}
             </div>
-            <div style="clear:both"></div>
         </div>
     {% end %}
     
