--- a/templates/user_comments.html
+++ b/templates/user_comments.html
@@ -14,7 +14,7 @@
             <img src="{{ user.gravatar(50) }}" class="gravatar">
             
             <div class="body">
-                <p class="comment_info">
+                <p class="info">
                     {% if comment.points == 1 %}
                         1 point
                     {% else %}
