--- a/templates/topic.html
+++ b/templates/topic.html
@@ -25,6 +25,7 @@
 
 {% block style %}
     <style>
+        .topic { margin-bottom: 4em; }
         #reply_box { display: none; }
         #reply_box .body { width: 75%; }
         #reply_box textarea {
