--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
 
 {% block style %}
     <style>
+        #content .wrapper {
+            margin-bottom: 2em;
+        }
+        
         #next_page {
             font-size: 1.2em;
         }
@@ -33,40 +37,42 @@
 {% end %}
 
 
-{% block content %}
+{% block content_wrapper %}
     {% for topic in topics %}
-        <div class="topic">
-            <h2 class="title">
-                <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
-            </h2>
-            <p class="info">
-                {% if not current_user %}
-                    <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
-                {% elif topic.can_vote_up(current_user) %}
-                    <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.name }}">+</a>
-                {% end %}
-                {% if topic.can_vote_down(current_user) %}
-                    / <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.name }}">-</a>
-                {% end %}
-                <span class="points">
-                    {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
-                </span>
-                {% if topic.author %}
-                    by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>{% for editor in topic.editors %}, <a href="/users/{{ editor }}">{{ editor }}</a>{% end %}
-                {% else %}
-                    by anonymous
-                {% end %}
-                {{ relative_date(topic.created) }}
-            </p>
-            <div class="body">
-                {{ markdown(topic.text) }}
-                {% if topic.n_comments == 1 %}
-                    <a href="/{{ topic.name }}">{{ topic.n_comments }} comment</a>
-                {% elif topic.n_comments %}
-                    <a href="/{{ topic.name }}">{{ topic.n_comments }} comments</a>
-                {% else %}
-                    <a href="/{{ topic.name }}">discuss</a>
-                {% end %}
+        <div class="wrapper">
+            <div class="topic">
+                <h2 class="title">
+                    <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
+                </h2>
+                <p class="info">
+                    {% if not current_user %}
+                        <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
+                    {% elif topic.can_vote_up(current_user) %}
+                        <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.name }}">+</a>
+                    {% end %}
+                    {% if topic.can_vote_down(current_user) %}
+                        / <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.name }}">-</a>
+                    {% end %}
+                    <span class="points">
+                        {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
+                    </span>
+                    {% if topic.author %}
+                        by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>{% for editor in topic.editors %}, <a href="/users/{{ editor }}">{{ editor }}</a>{% end %}
+                    {% else %}
+                        by anonymous
+                    {% end %}
+                    {{ relative_date(topic.created) }}
+                </p>
+                <div class="body">
+                    {{ markdown(topic.text) }}
+                    {% if topic.n_comments == 1 %}
+                        <a href="/{{ topic.name }}">{{ topic.n_comments }} comment</a>
+                    {% elif topic.n_comments %}
+                        <a href="/{{ topic.name }}">{{ topic.n_comments }} comments</a>
+                    {% else %}
+                        <a href="/{{ topic.name }}">discuss</a>
+                    {% end %}
+                </div>
             </div>
         </div>
     {% end %}
