--- a/templates/base.html
+++ b/templates/base.html
@@ -62,8 +62,8 @@
         <a href="http://www.google.com/search?sitesearch=thrutched.com">Search</a>
     </div>
     <div id="content">
-        {% block content_wrapper %}
-            <div class="wrapper">
+        {% block content_inner %}
+            <div class="inner">
                 {% block content %}{% end %}
             </div>
         {% end %}
