--- a/templates/user_topics.html
+++ b/templates/user_topics.html
@@ -10,7 +10,7 @@
     <h1>{{ user.name.capitalize() }}'s Topics</h1>
     
     <table class="topic_listing">
-        {% for topic in user.topics %}
+        {% for topic in topics %}
             {% include "_topic_listing.html" %}
         {% end %}
     </table>
