--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ ul li { list-style-type: disc; }
 blockquote, pre, code {
     color: #777;
     background-color: #F8F8F8;
-    border-left: 4px solid #BBB;
+    border-left: 4px solid #ddd;
     padding: 1em;
     padding-bottom: 0.1em;
 }
@@ -57,8 +57,10 @@ blockquote, pre, code {
 input[type="text"],
 input[type="password"],
 textarea {
-    color: inherit;
-    padding: 0.2em;
+    color: #777;
+    background-color: #F8F8F8;
+    border: 1px solid #ddd;
+    padding: 0.4em;
     display: block;
     margin-bottom: 0.5em;
 }
