--- a/templates/submit.html
+++ b/templates/submit.html
@@ -10,19 +10,21 @@
     <style>
         #title { width: 90%; }
         textarea {
-            height: 300px;
+            height: 200px;
             width: 90%;
         }
         #slug {
             display: inline; 
             width: 50%;
-            border: none;
-            background: #eee;
         }
         .slug { font-size: 0.9em; color: grey; }
         
+        
         #preview {
-            display: none;
+            border: 1px dotted #888;
+            width: 90%;
+            margin-bottom: 10px;
+            padding: 10px;
         }
     </style>
 {% end %}
@@ -49,7 +51,7 @@
                         .empty()
                         .append(html);
                 });
-            }, 500);
+            }, 1000);
         }
         
         jQuery(function($){
@@ -98,7 +100,6 @@
         <textarea id="text" name="text" tabindex="4">{{ handler.get_argument('text', '') }}</textarea>
         <br>
         <div id="preview">
-            <h2>Preview</h2>
             <div class="content"></div>
         </div>
         <input type="submit" value="Do it!" tabindex="5">
