lighter font for profile

--- a/templates/account.html
+++ b/templates/account.html
@@ -29,7 +29,7 @@
     
     <div id="info">
         <img src="{{ current_user.gravatar(100) }}" class="gravatar">
-        <div class="body">
+        <div class="body info">
             <a href="/users/{{ current_user.name }}">My Profile</a>
             <br>
             {{ current_user.karma }} karma
