--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -20,7 +20,7 @@
     
     <div id="info">
         <img src="{{ user.gravatar(100) }}" class="gravatar">
-        <div class="body">
+        <div class="body info">
             Joined {{ relative_date(user.created) }}
             <br>
             {{ user.karma }} karma
