--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
             <a href="{{ current_site.facebook }}">Facebook</a>
         {% end %}
         <a href="/rss.xml">RSS</a>
-        <a href="https://github.com/csytan/webnodes">Github</a>
+        <a href="https://github.com/csytan/webnodes">GitHub</a>
         <a href="http://www.google.com/search?sitesearch=thrutched.com">Search</a>
     </div>
     <div id="content">
