--- a/static/style.css
+++ b/static/style.css
@@ -130,9 +130,9 @@ textarea {
 }
 #sidebar iframe.facebook {
     border: none;
-    width: 200px;
-    height: 50px;
-    margin: 10px 0;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
 }
 #sidebar .favorites a {
     color: rgba(0, 0, 0, .4);
@@ -162,8 +162,6 @@ textarea {
 }
 #message.success { background-color: #c6eac5; border: 1px solid #a5c4a4;}
 #message.error { background-color: #F8ECEF; border: 1px solid #e0bac7;}
-
-
 
 
 
