--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
         </div>
         
         {% if current_site.facebook %}
-            <iframe class="facebook" src="http://www.facebook.com/plugins/like.php?href={{ current_site.facebook_urlencoded }}&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=50&amp;width=200" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            <iframe class="facebook" src="http://www.facebook.com/plugins/like.php?href={{ current_site.facebook_urlencoded }}&amp;layout=standard&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;height=30&amp;width=250" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
         {% end %}
         
         <h2>Favorites</h2>
