--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@ html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
 
 html {
     background: #EBEBEB;
+    background: #CFCCC2;
 }
 body {
     width: 1000px;
