--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,11 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
     <script type="text/javascript" src="/static/script.js"></script>
     {% block script %}{% end %}
+    <script src="/static/snowstorm-min.js"></script>
+    <script>
+    snowStorm.animationInterval = 50;
+    snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
+    </script>
 </head>
 
 <body>
